--- a/index.html
+++ b/index.html
@@ -228,6 +228,84 @@
     </section>
     <!--  About section exit-->
     <!--  Services section-->
+    <section id="services" class="services-wrapper">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12 text-center mb-4">
+            <span class="subtitle">
+              What can do for you?
+            </span>
+            <h2>My Awesome Services</h2>
+            <p>There are many variations of passages of Lorem ipsum available, <br class="d-none d-md-block">
+               but the majority have suffered in some form, by injected humour</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-4 col-md-6 mb-4">
+            <div class="card">
+              <div class="card-body text-md-start text-center">
+                <img src="images/service/service-1.svg" alt="">
+                <h3>Business Strategy</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 mb-4">
+            <div class="card">
+              <div class="card-body text-md-start text-center">
+                <img src="images/service/service-2.svg" alt="">
+                <h3>Website Development</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 mb-4">
+            <div class="card">
+              <div class="card-body text-md-start text-center">
+                <img src="images/service/service-3.svg" alt="">
+                <h3>Marketing et Reporting</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 mb-4">
+            <div class="card">
+              <div class="card-body text-md-start text-center">
+                <img src="images/service/service-3.svg" alt="">
+                <h3>Mobile App Development</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 mb-4">
+            <div class="card">
+              <div class="card-body text-md-start text-center">
+                <img src="images/service/service-4.svg" alt="">
+                <h3>Mobile App Development</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 mb-4">
+            <div class="card">
+              <div class="card-body text-md-start text-center">
+                <img src="images/service/service-3.svg" alt="">
+                <h3>Mobile App Development</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+              </div>
+            </div>
+          </div>
+
+
+        </div>
+      </div>
+
+    </section>
     <!--  Services section exit-->
     <!-- Portfolio section -->
     <!-- Portfolio section exit -->
