--- a/index.html
+++ b/index.html
@@ -439,6 +439,40 @@
     </section>
     <!-- Contact section exit -->
     <!-- Footer section -->
+    <section id="footer" class="footer-wrapper">
+      <div class="container footer-wrapper mt-3 mt-md-0">
+        <div class="row align-items-center">
+          <div class="col-lg-4 col-md-6 text-center text-md-start p-0">
+            <div class="footer-logo mb-3 mb-md-0">
+              <img src="images/logo.png" alt="" class="img-fluid">
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 p-0">
+            <ul class="list-unstyled d-flex justify-content-center justify-content-md-end justify-content-lg-center social-icon mb-3 mb-md-0">
+              <li>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fab fa-facebook"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fab fa-linkedin"></i></a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-lg-4 col-md-12">
+            <div class="copyright-text text-lg-start text-center mb-3 mb-lg-0">
+              <p class="mb-0">
+                Copyright © 2022 <a href="">Code4education</a>. All Rights Reserved.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- Footer section exit -->
     
 </body>
